PCHR-1251: Implement .nested-table + misc

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/report.html
@@ -41,7 +41,7 @@
           </tr>
           <tr>
             <td colspan="8">
-              <div class="table-responsive">
+              <div class="table-nested table-responsive">
                 <table class="table">
                   <thead>
                     <tr>
@@ -53,6 +53,7 @@
                       <th>Maternity</th>
                       <th>Sick</th>
                       <th>Other</th>
+                      <th></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -109,7 +110,7 @@
           </tr>
           <tr>
             <td colspan="8">
-              <div class="table-responsive">
+              <div class="table-nested table-responsive">
                 <table class="table">
                   <thead>
                     <tr>
@@ -121,6 +122,7 @@
                       <th>Maternity</th>
                       <th>Sick</th>
                       <th>Other</th>
+                      <th></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -261,7 +263,7 @@
           </tr>
           <tr>
             <td colspan="8">
-              <div class="table-responsive">
+              <div class="table-nested table-responsive">
                 <table class="table">
                   <thead>
                     <tr>
@@ -273,6 +275,7 @@
                       <th>Maternity</th>
                       <th>Sick</th>
                       <th>Other</th>
+                      <th></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -384,7 +387,7 @@
           </tr>
           <tr>
             <td colspan="8">
-              <div class="table-responsive">
+              <div class="table-nested table-responsive">
                 <table class="table">
                   <thead>
                     <tr>
@@ -396,6 +399,7 @@
                       <th>Maternity</th>
                       <th>Sick</th>
                       <th>Other</th>
+                      <th></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -448,7 +452,7 @@
           </tr>
           <tr>
             <td colspan="8">
-              <div class="table-responsive">
+              <div class="table-nested table-responsive">
                 <table class="table">
                   <thead>
                     <tr>
@@ -460,11 +464,12 @@
                       <th>Maternity</th>
                       <th>Sick</th>
                       <th>Other</th>
+                      <th></th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
-                      <td>Sickn</td>
+                      <td>Sick</td>
                       <td>18/05/2015 - 22/05/2015</td>
                       <td>Rejected</td>
                       <td></td>
