PCHR-1251: Use .table-condensed for nested tables

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/report.html
@@ -42,7 +42,7 @@
           <tr>
             <td colspan="8">
               <div class="table-nested table-responsive">
-                <table class="table">
+                <table class="table table-condensed">
                   <thead>
                     <tr>
                       <th></th>
@@ -111,7 +111,7 @@
           <tr>
             <td colspan="8">
               <div class="table-nested table-responsive">
-                <table class="table">
+                <table class="table table-condensed">
                   <thead>
                     <tr>
                       <th></th>
@@ -264,7 +264,7 @@
           <tr>
             <td colspan="8">
               <div class="table-nested table-responsive">
-                <table class="table">
+                <table class="table table-condensed">
                   <thead>
                     <tr>
                       <th></th>
@@ -388,7 +388,7 @@
           <tr>
             <td colspan="8">
               <div class="table-nested table-responsive">
-                <table class="table">
+                <table class="table table-condensed">
                   <thead>
                     <tr>
                       <th></th>
@@ -453,7 +453,7 @@
           <tr>
             <td colspan="8">
               <div class="table-nested table-responsive">
-                <table class="table">
+                <table class="table table-condensed">
                   <thead>
                     <tr>
                       <th></th>
