PCHR-1251: Amend classes applied to markup

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/report.html
@@ -12,17 +12,18 @@
       </select>
     </div>
     <div class="table-responsive">
-      <table class="table">
+      <table class="table chr_leave-report__table">
         <thead>
           <tr>
-            <th></th>
-            <th>Dates</th>
-            <th>Status</th>
-            <th>Vacation</th>
-            <th>TOIL</th>
-            <th>Maternity</th>
-            <th>Sick</th>
-            <th>Other</th>
+            <th class="chr_leave-report__cell--label"></th>
+            <th class="chr_leave-report__cell--dates">Dates</th>
+            <th class="chr_leave-report__cell--status">Status</th>
+            <th class="chr_leave-report__cell--type">Vacation</th>
+            <th class="chr_leave-report__cell--type">TOIL</th>
+            <th class="chr_leave-report__cell--type">Maternity</th>
+            <th class="chr_leave-report__cell--type">Sick</th>
+            <th class="chr_leave-report__cell--type">Other</th>
+            <th class="chr_leave-report__cell--action"></th>
           </tr>
         </thead>
         <tbody>
@@ -40,20 +41,20 @@
             <td>0</td>
           </tr>
           <tr>
-            <td colspan="8">
+            <td colspan="9">
               <div class="table-nested table-responsive">
                 <table class="table table-condensed">
                   <thead>
                     <tr>
-                      <th></th>
-                      <th>Dates</th>
-                      <th>Status</th>
-                      <th>Vacation</th>
-                      <th>TOIL</th>
-                      <th>Maternity</th>
-                      <th>Sick</th>
-                      <th>Other</th>
-                      <th></th>
+                      <th class="chr_leave-report__cell--label"></th>
+                      <th class="chr_leave-report__cell--dates">Dates</th>
+                      <th class="chr_leave-report__cell--status">Status</th>
+                      <th class="chr_leave-report__cell--type">Vacation</th>
+                      <th class="chr_leave-report__cell--type">TOIL</th>
+                      <th class="chr_leave-report__cell--type">Maternity</th>
+                      <th class="chr_leave-report__cell--type">Sick</th>
+                      <th class="chr_leave-report__cell--type">Other</th>
+                      <th class="chr_leave-report__cell--action"></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -109,20 +110,20 @@
             <td></td>
           </tr>
           <tr>
-            <td colspan="8">
+            <td colspan="9">
               <div class="table-nested table-responsive">
                 <table class="table table-condensed">
                   <thead>
                     <tr>
-                      <th></th>
-                      <th>Dates</th>
-                      <th>Status</th>
-                      <th>Vacation</th>
-                      <th>TOIL</th>
-                      <th>Maternity</th>
-                      <th>Sick</th>
-                      <th>Other</th>
-                      <th></th>
+                      <th class="chr_leave-report__cell--label"></th>
+                      <th class="chr_leave-report__cell--dates">Dates</th>
+                      <th class="chr_leave-report__cell--status">Status</th>
+                      <th class="chr_leave-report__cell--type">Vacation</th>
+                      <th class="chr_leave-report__cell--type">TOIL</th>
+                      <th class="chr_leave-report__cell--type">Maternity</th>
+                      <th class="chr_leave-report__cell--type">Sick</th>
+                      <th class="chr_leave-report__cell--type">Other</th>
+                      <th class="chr_leave-report__cell--action"></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -262,20 +263,20 @@
             <td>-1</td>
           </tr>
           <tr>
-            <td colspan="8">
+            <td colspan="9">
               <div class="table-nested table-responsive">
                 <table class="table table-condensed">
                   <thead>
                     <tr>
-                      <th></th>
-                      <th>Dates</th>
-                      <th>Status</th>
-                      <th>Vacation</th>
-                      <th>TOIL</th>
-                      <th>Maternity</th>
-                      <th>Sick</th>
-                      <th>Other</th>
-                      <th></th>
+                      <th class="chr_leave-report__cell--label"></th>
+                      <th class="chr_leave-report__cell--dates">Dates</th>
+                      <th class="chr_leave-report__cell--status">Status</th>
+                      <th class="chr_leave-report__cell--type">Vacation</th>
+                      <th class="chr_leave-report__cell--type">TOIL</th>
+                      <th class="chr_leave-report__cell--type">Maternity</th>
+                      <th class="chr_leave-report__cell--type">Sick</th>
+                      <th class="chr_leave-report__cell--type">Other</th>
+                      <th class="chr_leave-report__cell--action"></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -288,7 +289,7 @@
                       <td></td>
                       <td></td>
                       <td></td>
-                      <td>
+                      <td class="chr_leave-report__cell--action">
                         <a href="#"><i class="fa fa-ellipsis-v"></i></a>
                       </td>
                     </tr>
@@ -301,7 +302,7 @@
                       <td></td>
                       <td></td>
                       <td>-2</td>
-                      <td>
+                      <td class="chr_leave-report__cell--action">
                         <a href="#"><i class="fa fa-ellipsis-v"></i></a>
                       </td>
                     </tr>
@@ -314,7 +315,7 @@
                       <td></td>
                       <td></td>
                       <td></td>
-                      <td>
+                      <td class="chr_leave-report__cell--action">
                         <a href="#"><i class="fa fa-ellipsis-v"></i></a>
                       </td>
                     </tr>
@@ -327,7 +328,7 @@
                       <td></td>
                       <td></td>
                       <td></td>
-                      <td>
+                      <td class="chr_leave-report__cell--action">
                         <a href="#"><i class="fa fa-ellipsis-v"></i></a>
                       </td>
                     </tr>
@@ -340,7 +341,7 @@
                       <td>-21</td>
                       <td></td>
                       <td></td>
-                      <td>
+                      <td class="chr_leave-report__cell--action">
                         <a href="#"><i class="fa fa-ellipsis-v"></i></a>
                       </td>
                     </tr>
@@ -353,7 +354,7 @@
                       <td></td>
                       <td></td>
                       <td>-1</td>
-                      <td>
+                      <td class="chr_leave-report__cell--action">
                         <a href="#"><i class="fa fa-ellipsis-v"></i></a>
                       </td>
                     </tr>
@@ -371,6 +372,7 @@
             <td>-21</td>
             <td>-2</td>
             <td>-1</td>
+            <td></td>
           </tr>
           <tr>
             <td>
@@ -386,20 +388,20 @@
             <td>0</td>
           </tr>
           <tr>
-            <td colspan="8">
+            <td colspan="9">
               <div class="table-nested table-responsive">
                 <table class="table table-condensed">
                   <thead>
                     <tr>
-                      <th></th>
-                      <th>Dates</th>
-                      <th>Status</th>
-                      <th>Vacation</th>
-                      <th>TOIL</th>
-                      <th>Maternity</th>
-                      <th>Sick</th>
-                      <th>Other</th>
-                      <th></th>
+                      <th class="chr_leave-report__cell--label"></th>
+                      <th class="chr_leave-report__cell--dates">Dates</th>
+                      <th class="chr_leave-report__cell--status">Status</th>
+                      <th class="chr_leave-report__cell--type">Vacation</th>
+                      <th class="chr_leave-report__cell--type">TOIL</th>
+                      <th class="chr_leave-report__cell--type">Maternity</th>
+                      <th class="chr_leave-report__cell--type">Sick</th>
+                      <th class="chr_leave-report__cell--type">Other</th>
+                      <th class="chr_leave-report__cell--action"></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -412,7 +414,7 @@
                       <td></td>
                       <td></td>
                       <td></td>
-                      <td>
+                      <td class="chr_leave-report__cell--action">
                         <a href="#"><i class="fa fa-ellipsis-v"></i></a>
                       </td>
                     </tr>
@@ -425,7 +427,7 @@
                       <td></td>
                       <td></td>
                       <td></td>
-                      <td>
+                      <td class="chr_leave-report__cell--action">
                         <a href="#"><i class="fa fa-ellipsis-v"></i></a>
                       </td>
                     </tr>
@@ -443,28 +445,29 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
           </tr>
           <tr>
-            <td colspan="8">
+            <td colspan="9">
               <i class="fa fa-chevron-down" aria-hidden="true"></i>
               Cancelled and Other
             </td>
           </tr>
           <tr>
-            <td colspan="8">
+            <td colspan="9">
               <div class="table-nested table-responsive">
                 <table class="table table-condensed">
                   <thead>
                     <tr>
-                      <th></th>
-                      <th>Dates</th>
-                      <th>Status</th>
-                      <th>Vacation</th>
-                      <th>TOIL</th>
-                      <th>Maternity</th>
-                      <th>Sick</th>
-                      <th>Other</th>
-                      <th></th>
+                      <th class="chr_leave-report__cell--label"></th>
+                      <th class="chr_leave-report__cell--dates">Dates</th>
+                      <th class="chr_leave-report__cell--status">Status</th>
+                      <th class="chr_leave-report__cell--type">Vacation</th>
+                      <th class="chr_leave-report__cell--type">TOIL</th>
+                      <th class="chr_leave-report__cell--type">Maternity</th>
+                      <th class="chr_leave-report__cell--type">Sick</th>
+                      <th class="chr_leave-report__cell--type">Other</th>
+                      <th class="chr_leave-report__cell--action"></th>
                     </tr>
                   </thead>
                   <tbody>
