PCHR-1251: Implement .table-condensed-mixed

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/report.html
@@ -12,7 +12,7 @@
       </select>
     </div>
     <div class="table-responsive">
-      <table class="table chr_leave-report__table">
+      <table class="table table-condensed-mixed">
         <thead>
           <tr>
             <th class="chr_leave-report__cell--label"></th>
