PCHR-1251: Amend classes

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/report.html
@@ -11,19 +11,19 @@
         <option value="3" selected>2018</option>
       </select>
     </div>
-    <div class="table-responsive">
+    <div class="table-responsive  chr_leave-report__table">
       <table class="table table-condensed-mixed">
         <thead>
           <tr>
-            <th class="chr_leave-report__cell--label"></th>
-            <th class="chr_leave-report__cell--dates">Dates</th>
-            <th class="chr_leave-report__cell--status">Status</th>
-            <th class="chr_leave-report__cell--type">Vacation</th>
-            <th class="chr_leave-report__cell--type">TOIL</th>
-            <th class="chr_leave-report__cell--type">Maternity</th>
-            <th class="chr_leave-report__cell--type">Sick</th>
-            <th class="chr_leave-report__cell--type">Other</th>
-            <th class="chr_leave-report__cell--action"></th>
+            <th class="chr_leave-report__table__heading--label"></th>
+            <th class="chr_leave-report__table__heading--dates">Dates</th>
+            <th class="chr_leave-report__table__heading--status">Status</th>
+            <th class="chr_leave-report__table__heading--type">Vacation</th>
+            <th class="chr_leave-report__table__heading--type">TOIL</th>
+            <th class="chr_leave-report__table__heading--type">Maternity</th>
+            <th class="chr_leave-report__table__heading--type">Sick</th>
+            <th class="chr_leave-report__table__heading--type">Other</th>
+            <th class="chr_leave-report__table__heading--action"></th>
           </tr>
         </thead>
         <tbody>
@@ -39,22 +39,23 @@
             <td>0</td>
             <td>0</td>
             <td>0</td>
+            <td></td>
           </tr>
           <tr>
-            <td colspan="9">
+            <td class="table-nested-cell" colspan="9">
               <div class="table-nested table-responsive">
                 <table class="table table-condensed">
                   <thead>
                     <tr>
-                      <th class="chr_leave-report__cell--label"></th>
-                      <th class="chr_leave-report__cell--dates">Dates</th>
-                      <th class="chr_leave-report__cell--status">Status</th>
-                      <th class="chr_leave-report__cell--type">Vacation</th>
-                      <th class="chr_leave-report__cell--type">TOIL</th>
-                      <th class="chr_leave-report__cell--type">Maternity</th>
-                      <th class="chr_leave-report__cell--type">Sick</th>
-                      <th class="chr_leave-report__cell--type">Other</th>
-                      <th class="chr_leave-report__cell--action"></th>
+                      <th class="chr_leave-report__table__heading--label"></th>
+                      <th class="chr_leave-report__table__heading--dates">Dates</th>
+                      <th class="chr_leave-report__table__heading--status">Status</th>
+                      <th class="chr_leave-report__table__heading--type">Vacation</th>
+                      <th class="chr_leave-report__table__heading--type">TOIL</th>
+                      <th class="chr_leave-report__table__heading--type">Maternity</th>
+                      <th class="chr_leave-report__table__heading--type">Sick</th>
+                      <th class="chr_leave-report__table__heading--type">Other</th>
+                      <th class="chr_leave-report__table__heading--action"></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -108,22 +109,23 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
           </tr>
           <tr>
-            <td colspan="9">
+            <td class="table-nested-cell" colspan="9">
               <div class="table-nested table-responsive">
                 <table class="table table-condensed">
                   <thead>
                     <tr>
-                      <th class="chr_leave-report__cell--label"></th>
-                      <th class="chr_leave-report__cell--dates">Dates</th>
-                      <th class="chr_leave-report__cell--status">Status</th>
-                      <th class="chr_leave-report__cell--type">Vacation</th>
-                      <th class="chr_leave-report__cell--type">TOIL</th>
-                      <th class="chr_leave-report__cell--type">Maternity</th>
-                      <th class="chr_leave-report__cell--type">Sick</th>
-                      <th class="chr_leave-report__cell--type">Other</th>
-                      <th class="chr_leave-report__cell--action"></th>
+                      <th class="chr_leave-report__table__heading--label"></th>
+                      <th class="chr_leave-report__table__heading--dates">Dates</th>
+                      <th class="chr_leave-report__table__heading--status">Status</th>
+                      <th class="chr_leave-report__table__heading--type">Vacation</th>
+                      <th class="chr_leave-report__table__heading--type">TOIL</th>
+                      <th class="chr_leave-report__table__heading--type">Maternity</th>
+                      <th class="chr_leave-report__table__heading--type">Sick</th>
+                      <th class="chr_leave-report__table__heading--type">Other</th>
+                      <th class="chr_leave-report__table__heading--action"></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -261,22 +263,23 @@
             <td>-21</td>
             <td>-2</td>
             <td>-1</td>
+            <td></td>
           </tr>
           <tr>
-            <td colspan="9">
+            <td class="table-nested-cell" colspan="9">
               <div class="table-nested table-responsive">
                 <table class="table table-condensed">
                   <thead>
                     <tr>
-                      <th class="chr_leave-report__cell--label"></th>
-                      <th class="chr_leave-report__cell--dates">Dates</th>
-                      <th class="chr_leave-report__cell--status">Status</th>
-                      <th class="chr_leave-report__cell--type">Vacation</th>
-                      <th class="chr_leave-report__cell--type">TOIL</th>
-                      <th class="chr_leave-report__cell--type">Maternity</th>
-                      <th class="chr_leave-report__cell--type">Sick</th>
-                      <th class="chr_leave-report__cell--type">Other</th>
-                      <th class="chr_leave-report__cell--action"></th>
+                      <th class="chr_leave-report__table__heading--label"></th>
+                      <th class="chr_leave-report__table__heading--dates">Dates</th>
+                      <th class="chr_leave-report__table__heading--status">Status</th>
+                      <th class="chr_leave-report__table__heading--type">Vacation</th>
+                      <th class="chr_leave-report__table__heading--type">TOIL</th>
+                      <th class="chr_leave-report__table__heading--type">Maternity</th>
+                      <th class="chr_leave-report__table__heading--type">Sick</th>
+                      <th class="chr_leave-report__table__heading--type">Other</th>
+                      <th class="chr_leave-report__table__heading--action"></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -289,7 +292,7 @@
                       <td></td>
                       <td></td>
                       <td></td>
-                      <td class="chr_leave-report__cell--action">
+                      <td class="chr_leave-report__table__heading--action">
                         <a href="#"><i class="fa fa-ellipsis-v"></i></a>
                       </td>
                     </tr>
@@ -302,7 +305,7 @@
                       <td></td>
                       <td></td>
                       <td>-2</td>
-                      <td class="chr_leave-report__cell--action">
+                      <td class="chr_leave-report__table__heading--action">
                         <a href="#"><i class="fa fa-ellipsis-v"></i></a>
                       </td>
                     </tr>
@@ -315,7 +318,7 @@
                       <td></td>
                       <td></td>
                       <td></td>
-                      <td class="chr_leave-report__cell--action">
+                      <td class="chr_leave-report__table__heading--action">
                         <a href="#"><i class="fa fa-ellipsis-v"></i></a>
                       </td>
                     </tr>
@@ -328,7 +331,7 @@
                       <td></td>
                       <td></td>
                       <td></td>
-                      <td class="chr_leave-report__cell--action">
+                      <td class="chr_leave-report__table__heading--action">
                         <a href="#"><i class="fa fa-ellipsis-v"></i></a>
                       </td>
                     </tr>
@@ -341,7 +344,7 @@
                       <td>-21</td>
                       <td></td>
                       <td></td>
-                      <td class="chr_leave-report__cell--action">
+                      <td class="chr_leave-report__table__heading--action">
                         <a href="#"><i class="fa fa-ellipsis-v"></i></a>
                       </td>
                     </tr>
@@ -354,7 +357,7 @@
                       <td></td>
                       <td></td>
                       <td>-1</td>
-                      <td class="chr_leave-report__cell--action">
+                      <td class="chr_leave-report__table__heading--action">
                         <a href="#"><i class="fa fa-ellipsis-v"></i></a>
                       </td>
                     </tr>
@@ -386,22 +389,23 @@
             <td>0</td>
             <td>0</td>
             <td>0</td>
+            <td></td>
           </tr>
           <tr>
-            <td colspan="9">
+            <td class="table-nested-cell" colspan="9">
               <div class="table-nested table-responsive">
                 <table class="table table-condensed">
                   <thead>
                     <tr>
-                      <th class="chr_leave-report__cell--label"></th>
-                      <th class="chr_leave-report__cell--dates">Dates</th>
-                      <th class="chr_leave-report__cell--status">Status</th>
-                      <th class="chr_leave-report__cell--type">Vacation</th>
-                      <th class="chr_leave-report__cell--type">TOIL</th>
-                      <th class="chr_leave-report__cell--type">Maternity</th>
-                      <th class="chr_leave-report__cell--type">Sick</th>
-                      <th class="chr_leave-report__cell--type">Other</th>
-                      <th class="chr_leave-report__cell--action"></th>
+                      <th class="chr_leave-report__table__heading--label"></th>
+                      <th class="chr_leave-report__table__heading--dates">Dates</th>
+                      <th class="chr_leave-report__table__heading--status">Status</th>
+                      <th class="chr_leave-report__table__heading--type">Vacation</th>
+                      <th class="chr_leave-report__table__heading--type">TOIL</th>
+                      <th class="chr_leave-report__table__heading--type">Maternity</th>
+                      <th class="chr_leave-report__table__heading--type">Sick</th>
+                      <th class="chr_leave-report__table__heading--type">Other</th>
+                      <th class="chr_leave-report__table__heading--action"></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -414,7 +418,7 @@
                       <td></td>
                       <td></td>
                       <td></td>
-                      <td class="chr_leave-report__cell--action">
+                      <td class="chr_leave-report__table__heading--action">
                         <a href="#"><i class="fa fa-ellipsis-v"></i></a>
                       </td>
                     </tr>
@@ -427,7 +431,7 @@
                       <td></td>
                       <td></td>
                       <td></td>
-                      <td class="chr_leave-report__cell--action">
+                      <td class="chr_leave-report__table__heading--action">
                         <a href="#"><i class="fa fa-ellipsis-v"></i></a>
                       </td>
                     </tr>
@@ -454,20 +458,20 @@
             </td>
           </tr>
           <tr>
-            <td colspan="9">
+            <td class="table-nested-cell" colspan="9">
               <div class="table-nested table-responsive">
                 <table class="table table-condensed">
                   <thead>
                     <tr>
-                      <th class="chr_leave-report__cell--label"></th>
-                      <th class="chr_leave-report__cell--dates">Dates</th>
-                      <th class="chr_leave-report__cell--status">Status</th>
-                      <th class="chr_leave-report__cell--type">Vacation</th>
-                      <th class="chr_leave-report__cell--type">TOIL</th>
-                      <th class="chr_leave-report__cell--type">Maternity</th>
-                      <th class="chr_leave-report__cell--type">Sick</th>
-                      <th class="chr_leave-report__cell--type">Other</th>
-                      <th class="chr_leave-report__cell--action"></th>
+                      <th class="chr_leave-report__table__heading--label"></th>
+                      <th class="chr_leave-report__table__heading--dates">Dates</th>
+                      <th class="chr_leave-report__table__heading--status">Status</th>
+                      <th class="chr_leave-report__table__heading--type">Vacation</th>
+                      <th class="chr_leave-report__table__heading--type">TOIL</th>
+                      <th class="chr_leave-report__table__heading--type">Maternity</th>
+                      <th class="chr_leave-report__table__heading--type">Sick</th>
+                      <th class="chr_leave-report__table__heading--type">Other</th>
+                      <th class="chr_leave-report__table__heading--action"></th>
                     </tr>
                   </thead>
                   <tbody>
